fix header title size on mobile view

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1,34 +1,32 @@
 body {
-  
 }
 
 header {
- background: url(../img/lope.jpg); 
- background-size: contain;
+  background: url(../img/lope.jpg);
+  background-size: contain;
 }
 
-.nav-item a{
+.nav-item a {
   color: #ffffff !important;
 }
-.brand a{
+.brand a {
   font-size: 4em;
-  font-family: 'Lobster', cursive;
-  color: #1FBBEF !important;
+  font-family: "Lobster", cursive;
+  color: #1fbbef !important;
 }
 
 .jumbotron {
   padding: 7rem 5rem;
   background-color: transparent;
-  color:#ffffff;
+  color: #ffffff;
 }
 .jumbotron h2 {
-  
-  font-size:3em; 
+  font-size: 3em;
 }
 
 .recipeButton {
-  background-color: #1FBBEF;
-  border-color: #1FBBEF; 
+  background-color: #1fbbef;
+  border-color: #1fbbef;
 }
 
 .recipes {
@@ -36,27 +34,14 @@ header {
   margin-bottom: 2rem;
 }
 
-
-@media (max-width: 991px) { 
-  .jumbotron {
-    padding: 0;
-    padding-top: 5rem 2rem;
-    
-  }
-  .jumbotron h2 {
-    font-size: 2em;
-  }
-
-}
-
 .card {
-  box-shadow: 0 2px 6px -2px rgba(22,22,22,0.45);
+  box-shadow: 0 2px 6px -2px rgba(22, 22, 22, 0.45);
   border-radius: 2px;
 }
 
 .card .btn-action {
   margin: -23px 20px -23px auto;
-  background-color: #1FBBEF;
+  background-color: #1fbbef;
   height: 47px;
   width: 47px;
   line-height: 0;
@@ -67,9 +52,9 @@ header {
   overflow: hidden;
   padding: 0;
   border-radius: 50%;
-  
-  -webkit-transition: .3s;
-  transition: .3s;
+
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .card .btn-action .fa.fa-chevron-right {
@@ -90,7 +75,7 @@ header {
 }
 
 .card .card-data {
-  background-color: #1FBBEF;
+  background-color: #1fbbef;
   color: #fff;
   text-align: center;
   height: auto;
@@ -99,7 +84,7 @@ header {
 
 .card .card-data ul {
   margin-bottom: 0;
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 .card .card-data ul li {
@@ -109,12 +94,12 @@ header {
 }
 
 hr {
-  border-top: 2px solid #1FBBEF;
+  border-top: 2px solid #1fbbef;
 }
 
 .cta {
-  background-color: #F8F9FD;
-  
+  background-color: #f8f9fd;
+
   padding: 3rem;
 }
 
@@ -122,14 +107,14 @@ hr {
   text-decoration: none;
 }
 
-footer{
+footer {
   background-color: black;
   color: white;
   padding: 2rem;
 }
 
 footer .brand a {
-  font-size: 3em !important; 
+  font-size: 3em !important;
   text-decoration: none;
   margin: auto;
 }
@@ -144,7 +129,7 @@ footer ul li {
 
 .main {
   padding: 3rem;
-  background-color: #F7F5F2;
+  background-color: #f7f5f2;
 }
 
 .registeration {
@@ -153,11 +138,11 @@ footer ul li {
 }
 
 .form-header {
-  background-color: #FCFCFB;
+  background-color: #fcfcfb;
 }
 
-.form-header span{
-  color:#1FBBEF;
+.form-header span {
+  color: #1fbbef;
 }
 
 .search {
@@ -173,13 +158,10 @@ main {
   margin: 2rem;
 }
 
-
-
-@media (max-width: 991px) { 
+@media (max-width: 991px) {
   .jumbotron {
     padding: 0;
     padding-top: 5rem 2rem;
-    
   }
   .jumbotron h2 {
     font-size: 2em;
@@ -190,4 +172,7 @@ main {
     margin: -25px;
   }
 
+  .brand a {
+    font-size: 2em;
+  }
 }
